# install-usb-gui

./: .tm_project2.cache  AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  install-usb-gui.bash  install-usb-gui.desktop  install-usb-gui.tgz  install_fromiso_in_USB  install_fromiso_in_USB.8  intltool-extract  intltool-merge  intltool-update  ltmain.sh
.anjuta/session/: anjuta.session  dock-layout.xml
debian/: changelog  control  copyright  install  install-usb-gui.menu  rules
icons/pixmaps/: install-usb-gui-16.xpm  install-usb-gui.xpm
po/: POTFILES.skip  da.po  de.po  el.po  es.po  fr.po  hr.po  it.po  ja.po  make_po.sh  messages.pot  nl.po  pl.po  pt.po  ro.po  ru.po  uk.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  install-usb-gui.glade  install_warning.glade  main.c  no_usb.glade
